--- a/Alerty/Assets/localization/tr.lproj/Localizable.strings
+++ b/Alerty/Assets/localization/tr.lproj/Localizable.strings
@@ -6,7 +6,7 @@
  
  */
 
-"button_title_cancel" = "Tamam";
+"button_title_cancel" = "TAMAM";
 "title_success" = "TEBRİKLER";
 "title_error" = "HATA";
 "title_warning" = "UYARI";
